--- a/nx-react/package.json
+++ b/nx-react/package.json
@@ -8,7 +8,7 @@
     "build": "nx build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
-    "e2e": "nx e2e react-app-e2e",
+    "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -29,6 +29,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
+    "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-is": "17.0.1",
@@ -40,16 +41,17 @@
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
-    "@nrwl/cli": "11.2.10",
-    "@nrwl/cypress": "11.2.10",
-    "@nrwl/eslint-plugin-nx": "11.2.10",
-    "@nrwl/jest": "11.2.10",
-    "@nrwl/linter": "11.2.10",
+    "@nrwl/cli": "11.2.11",
+    "@nrwl/cypress": "11.2.11",
+    "@nrwl/eslint-plugin-nx": "11.2.11",
+    "@nrwl/jest": "11.2.11",
+    "@nrwl/linter": "11.2.11",
+    "@nrwl/next": "11.2.11",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "11.2.10",
-    "@nrwl/tao": "11.2.10",
-    "@nrwl/web": "11.2.10",
-    "@nrwl/workspace": "11.2.10",
+    "@nrwl/react": "11.2.11",
+    "@nrwl/tao": "11.2.11",
+    "@nrwl/web": "11.2.11",
+    "@nrwl/workspace": "11.2.11",
     "@testing-library/react": "11.1.2",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
